[fixed] html shifting when dialog touches the border of the window

--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,5 @@
+html, body {position: relative}
+
 /* custom jquery ui dialog style */
 
 .ui-dialog .ui-dialog-titlebar
